--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6984dea2-1018-4a62-a856-f426e263d731",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9e493074-6208-4731-addc-f18a35cf115a",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "'C:\\\\Users\\\\sophi\\\\OneDrive\\\\Documents\\\\GitHub\\\\learning-portfolio-2024-aug-sophieemmatann2103\\\\6.1_files,_folders_&_os'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f25773a8-97ef-4203-bc43-d8de7b406c81",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9078b4d7-2ac1-449d-ad41-f1a18c3605bd",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6d8b258e-5d09-4587-92e5-fc5de7f6d849",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e9c67be6-c908-46f3-b9b1-3343cc3e2b23",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "2464217a-f793-4c27-884c-3fbd7ca473c4",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "'\\\\'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "6de40ce3-44a7-46c5-896e-79319c6db8cd",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "('hahaha', '.txt')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "647b9a76-9661-47d3-9542-f760e4b59b21",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "'txt'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "3bb5e766-5572-4b8f-bec1-bba485d26d39",
    "metadata": {},
    "outputs": [
@@ -361,8 +361,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fff\n",
-      "\n"
+      "gonegone\n",
+      "gone\n"
      ]
     }
    ],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "501ef013-43c1-4f04-8742-9dfc4e6b6a9d",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlol.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file: \n\u001b[0;32m      2\u001b[0m     filetext \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(filetext)\n",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlol.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file: \n\u001b[0;32m      2\u001b[0m     filetext \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(filetext)\n",
       "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'lol.txt'"
      ]
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "0b75ebdf",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "4d1136c2",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "5eeceb5a-cf7e-478e-b5ba-90451beeca11",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "3dcadbda-9b95-4443-95b9-0ae8fffdff0e",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "1ae4a244-b4d2-4d93-962d-5544fede631e",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "a1b718ce-c769-43bb-81a2-d64419c1e96f",
    "metadata": {},
    "outputs": [],
@@ -598,12 +598,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "a9be271b-ca3e-4488-8ed6-c79d3ebbd226",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.mkdir('Wooooo')"
+    "os.mkdir('Woooooo')"
    ]
   },
   {
@@ -611,7 +611,28 @@
    "id": "3d7ab23b-c3da-424d-9ea6-585b169a61f3",
    "metadata": {},
    "source": [
-    "go to file explorer, a new file called 'Wooooo' shld be there"
+    "go to file explorer, a new file called 'Woooooo' shld be there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d320a19f-1768-4112-b3c9-3c3cec47a61c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range (3):\n",
+    "    os.mkdir(f'friess_{i}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10270da2-6dee-4dbd-8400-f818f940e95e",
+   "metadata": {},
+   "source": [
+    "there should be 3 folders labelled fries in the file explorer. \n",
+    "\n",
+    "basically this js allows us to create many copies of the same file name at once using loop. note that the index starts from 0 as this is python."
    ]
   },
   {
@@ -634,13 +655,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "40fdfea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No not-there.txt\n"
+     ]
+    }
+   ],
    "source": [
+    "filename = 'not-there.txt'\n",
     "\n",
-    "# Your code here\n"
+    "try: \n",
+    "    with open(filename, 'r') as file:\n",
+    "        text = file.read()\n",
+    "\n",
+    "except:\n",
+    "    print (f'No {filename}')\n"
    ]
   },
   {
@@ -654,13 +689,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "03b33317",
    "metadata": {},
    "outputs": [],
    "source": [
+    "filename = 'not-there.txt'\n",
     "\n",
-    "# Your code here\n"
+    "if os.path.exists(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        text = file.read()"
    ]
   },
   {
@@ -673,12 +711,150 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d1af52-b676-443e-8f34-31a469e5f81e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f8be25d-c79e-479a-879b-385fcfa1328d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "f4ef1850",
    "metadata": {},
    "source": [
     "# 6 Listing and looking for files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c75f952-886e-4135-976b-5037db4dbdd9",
+   "metadata": {},
+   "source": [
+    "this one use the glob tool\n",
+    "\n",
+    "i hv created a new python 3 (ipykernel) called 'glob' in the jupyter notebook area.\n",
+    "\n",
+    "refer to the glob notebook for details"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "942c4863-7b8b-46d0-acb8-6a934af1d10f",
+   "metadata": {},
+   "source": [
+    "I use this if I want all the files in the current directory.\n",
+    "\n",
+    "The * is called a wildcard and is read as ‘anything’. So, I am asking glob to give me anything in the folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a5018686-e0cc-4bf7-96a6-2c6f5d521cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['files,_folders_&_os_(need).ipynb',\n",
+       " 'fries_0',\n",
+       " 'fries_1',\n",
+       " 'fries_2',\n",
+       " 'hihihi.txt',\n",
+       " 'sup.docx',\n",
+       " 'Wooooo']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*')    # this glob is searching the file explorer page like the above examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1b89c7c9-5c01-4dd0-a59a-389ea10ee7ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fries_0', 'fries_1', 'fries_2']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*fries*')    # finding all the folder containing fries in the name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2b3f7ac3-26bb-4a59-861b-d028a10c61d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fries_0\\\\i', 'fries_1\\\\am', 'fries_2\\\\sophie']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*fries*/*')   # want to know what is inside the folers that start with fries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24092192-6afc-4c9a-8a22-10cab6b4bfb2",
+   "metadata": {},
+   "source": [
+    "to search for all the detailed structure of the folder fries, need to tell glob to search recursively by putting recursive=True\n",
+    "\n",
+    "also must use two wildcards ** to say all 'sub-dictionaries'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7a292bec-2c79-4e5a-b870-2261adec86e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('fries/**', recursive=True)"
    ]
   },
   {
