--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -867,12 +867,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ae16c7dc-8d75-457b-8abd-09bf7b91c549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "people/Ringo/imgs/sp2273_logo.png png\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'people/Ringo/imgs/sp2273_logo.png'\n",
+    "filename = path.split(os.path.sep)[-1]\n",
+    "extension = filename.split('.')[-1]\n",
+    "print(filename, extension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d64b6e33-5732-4233-90c0-3d4da6c218e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'people/Ringo/imgs/sp2273_logo.png'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9f80d7da-58bb-4367-a055-311332cccc55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('people/Ringo/imgs', 'sp2273_logo.png')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.split(path)      # Split filename from the rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "abae2abd-f8ef-4d00-ac37-e4634d83723d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('people/Ringo/imgs/sp2273_logo', '.png')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.splitext(path)   # Split extension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "aafa202b-7c57-48b5-b090-1c6c5856262a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'people/Ringo/imgs'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.dirname(path)    # Show the directory"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "d9bef88d",
    "metadata": {},
    "source": [
     "# 8 Deleting stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "09cba04f-862c-4e2b-a937-d882dd0a9434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.remove('C:\\\\Users\\\\sophi\\\\OneDrive\\\\Documents\\\\GitHub\\\\lol.txt')   # removes files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "674dd5cd-e0e4-4f30-9101-0138e3538b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('friess_1/')      # removing empty directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "e8912355-e0f2-4c52-ab4e-b912ff37032a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.rmtree('fries_2/')    # for directory with files"
    ]
   }
  ],
