Revert "Merge branch 'main' of https://github.com/SPS-SP2273/learning-portfolio-2024-aug-sophieemmatann2103"
This reverts commit 6ca3ea4ee3d1c0dd65f7ddbb496089aa5daf2c23, reversing
changes made to 553120cc5dbbf31142543e13d940150619897a7a.

--- a/5.2_functions__exercises/functions_(need)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(need)_exercises.ipynb
@@ -152,7 +152,7 @@
     "    if n < 0:\n",
     "        return \"Factorial is not defined for negative numbers.\"\n",
     "   \n",
-    "    elif n == 0:            # Handle the base case where n is 0 or 1\n",
+    "    elif n == 0 or n == 1:            # Handle the base case where n is 0 or 1\n",
     "        return 1\n",
     "    \n",
     "    else:                             # Calculate factorial using a loop                           \n",
