--- a/7.2_plotting__exercises/plotting_(good)_exercises.ipynb
+++ b/7.2_plotting__exercises/plotting_(good)_exercises.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "141ac1db-7674-4d7a-806e-b7e65e28e082",
    "metadata": {},
    "outputs": [
@@ -62,37 +62,37 @@
       "<>:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:49: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:13: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:13: SyntaxWarning: invalid escape sequence '\\c'\n",
       "  axes[0, 0].plot(x, cos_x, color='r', label='$\\cos x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:15: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:15: SyntaxWarning: invalid escape sequence '\\c'\n",
       "  linestyle=':', label='$\\cos^2 x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:16: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:16: SyntaxWarning: invalid escape sequence '\\c'\n",
       "  axes[0, 0].set_title('$\\cos x$ & $\\cos^2x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:23: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:23: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  axes[0, 1].plot(x, sin_x, color='g', label='$\\sin x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:25: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:25: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  axes[0, 1].plot(x, sin_x**2, -2, label='$\\sin^2 x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:26: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:26: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  axes[0, 1].set_title('$\\sin x$ & $\\sin^2x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:35: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:35: SyntaxWarning: invalid escape sequence '\\c'\n",
       "  axes[1, 0].set_title('$e^{-x}\\cos 5x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 0].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 0].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 0].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:39: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 0].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:45: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:45: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  axes[1, 1].set_title('$e^{-x}\\sin 2x$')\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 1].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 1].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 1].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n",
-      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\3770090924.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\sophi\\AppData\\Local\\Temp\\ipykernel_12600\\2640749556.py:49: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  axes[1, 1].set_xticklabels(['$-\\pi$', '$-\\pi/2$', '0', '$\\pi/2$', '$\\pi$'])\n"
      ]
     },
@@ -164,7 +164,9 @@
     "for a in axes.flatten():\n",
     "    a.grid(alpha=.5)\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig('plot_after.jpg', format='jpg')\n",
+    "plt.show()"
    ]
   },
   {
