READY_FOR_REVIEW_files,_folders_&_os_(need)_exercises

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -161,10 +161,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "0ca35c7f-54d9-4af6-b2b3-727efaaebbb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[0;32m     20\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m base_name \n\u001b[1;32m---> 22\u001b[0m txt_files \u001b[38;5;241m=\u001b[39m \u001b[43mglob\u001b[49m\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)       \u001b[38;5;66;03m# use glob to find all the .txt files in the folder\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m old_file_name \u001b[38;5;129;01min\u001b[39;00m txt_files:      \u001b[38;5;66;03m# use for loop to search each file in the data and rename\u001b[39;00m\n\u001b[0;32m     25\u001b[0m     new_file_name \u001b[38;5;241m=\u001b[39m rename_my_file(old_file_name)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def rename_my_file(old_file_name): \n",
     "    dictionary = {\n",
@@ -192,7 +204,7 @@
     "for old_file_name in txt_files:      # use for loop to search each file in the data and rename\n",
     "    new_file_name = rename_my_file(old_file_name)\n",
     "\n",
-    "    if new_file_name != os.path.basename(old_filen_name):    # only rename if new filename is different from old one\n",
+    "    if new_file_name != os.path.basename(old_file_name):    # only rename if new filename is different from old one\n",
     "        os.rename(old_file_name, new_file_name)\n",
     "\n",
     "        print(f'{old_file_name}---->{new_file_name}')\n",
